Fix small padding on mobile

--- a/res/css/style.less
+++ b/res/css/style.less
@@ -209,7 +209,7 @@ a{
 }
 
 @media only screen and (max-width: 512px) {
-	.box { padding: 10px; }
+	.box { padding: 20px; }
 	.box-sm, .box-md { width: 100%; }
 }
 
